--- a/day003.html
+++ b/day003.html
@@ -29,7 +29,7 @@
     </div>
   </body>
   <script>
-    window.addEventListener("scroll", function () {
+    window.addEventListenr("scroll", function () {
       var temp = window.scrollY;
       var fontSizee = temp + "px";
       console.log(temp);
