--- a/day004.html
+++ b/day004.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+      .form-hide {
+        display: none;
+      }
+    </style>
     <title>Document</title>
   </head>
   <body>
@@ -13,6 +18,27 @@
         <option>모자</option>
         <option>셔츠</option>
       </select>
+      <select class="form-select mt-2 form-hide">
+        <option>95</option>
+        <option>100</option>
+      </select>
     </form>
   </body>
+  <script>
+    document
+      .querySelector(".form-select")
+      .addEventListener("input", function () {
+        var value = document.querySelector(".form-select").value;
+        console.log(value);
+        if (value == "셔츠") {
+          document
+            .querySelectorAll(".form-select")[1]
+            .classList.remove("form-hide");
+        } else {
+          document
+            .querySelectorAll(".form-select")[1]
+            .classList.add("form-hide");
+        }
+      });
+  </script>
 </html>
